adjusted help activity and viewmodel

--- a/tti2sdk/src/main/res/layout/activity_help.xml
+++ b/tti2sdk/src/main/res/layout/activity_help.xml
@@ -43,172 +43,162 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/containerHelpInformation"
+    <View
+        android:id="@+id/viewBackground"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
+        android:layout_marginTop="262dp"
+        android:background="@drawable/background_help_activity"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/containerHelpButtons">
+        app:layout_constraintTop_toTopOf="parent"/>
 
-        <View
-            android:id="@+id/viewBackground"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/background_help_activity"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginTop="262dp"/>
+    <TextView
+        android:id="@+id/btnSkip"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="22dp"
+        android:layout_marginTop="22dp"
+        android:text="@string/txt_help_Skip"
+        android:textAllCaps="false"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/containerHelpButtons"/>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/containerFirstHelpPage"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/containerHelpButtons"
+        tools:visibility="visible">
 
         <ImageView
-            android:id="@+id/logoView"
-            android:layout_width="360dp"
-            android:layout_height="360dp"
-            android:layout_marginTop="72dp"
-            android:layout_marginBottom="334dp"
+            android:id="@+id/imgMainHelp"
+            android:layout_width="320dp"
+            android:layout_height="320dp"
             android:background="@drawable/logo_help_activity"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:contentDescription="@string/txt_help_titleDescription"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:contentDescription="@string/txt_help_titleDescription"/>
+            app:layout_constraintTop_toTopOf="parent"/>
 
         <TextView
-            android:id="@+id/helpTitle"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            android:id="@+id/txtHelpTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/telkomsel_batik_sans_regular"
+            android:gravity="center"
+            android:lineSpacingExtra="3sp"
+            android:text="@string/txt_help_title"
+            android:textColor="@color/all_white"
+            android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginLeft="31dp"
-            android:layout_marginRight="31dp"
-            android:layout_marginTop="365dp"
-            android:layout_marginBottom="265dp"
-            android:layout_width="304dp"
-            android:layout_height="64dp"
-            android:text="@string/txt_help_title"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/imgMainHelp"
+            tools:text="@string/txt_help_title"/>
 
         <TextView
-            android:id="@+id/helpDescription"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            android:id="@+id/txtHelpDescription"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="40dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="40dp"
+            android:fontFamily="@font/telkomsel_batik_sans_regular"
+            android:gravity="center"
+            android:lineSpacingExtra="4sp"
+            android:text="@string/txt_help_description"
+            android:textColor="@color/all_white"
+            android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginLeft="35dp"
-            android:layout_marginRight="35dp"
-            android:layout_marginTop="440dp"
-            android:layout_marginBottom="166dp"
-            android:layout_width="290dp"
-            android:layout_height="88dp"
-            android:text="@string/txt_help_description"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/txtHelpTitle"
+            tools:text="@string/txt_help_description"/>
 
         <CheckBox
-            android:id="@+id/termsAndConditionsCheck"
-            android:layout_width="wrap_content"
+            android:id="@+id/chkboxTerms"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="14dp"
+            android:layout_marginEnd="32dp"
+            android:paddingStart="12dp"
+            android:buttonTint="@color/all_white"
+            android:text="@string/txt_help_AcceptTerms"
+            android:textColor="@color/all_white"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="parent"
-            app:layout_constraintBottom_toTopOf="parent"
-            android:layout_marginTop="543dp"
-            android:layout_marginStart="37dp"
-            android:layout_marginEnd="303dp"
-            android:layout_marginBottom="131dp"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/txtHelpDescription"
+            tools:text="@string/txt_help_AcceptTerms"/>
+
+        <Button
+            style="@style/ButtonStyle"
+            android:id="@+id/btnStart"
+            android:layout_width="0dp"
+            android:layout_height="48dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/background_btn_help_start"
+            android:clickable="true"
+            android:backgroundTint="@color/all_white"
+            android:drawableRight="@drawable/ic_forward"
+            android:focusable="true"
+            android:paddingEnd="30dp"
+            android:paddingStart="30dp"
+            android:text="@string/txt_help_LetsStart"
+            android:textAlignment="viewStart"
+            android:textAllCaps="false"
+            android:textColor="@color/red_default"
+            android:textSize="18sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/chkboxTerms"/>
 
         <TextView
-            android:id="@+id/termsAndConditionsText"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginTop="540dp"
-            android:layout_marginStart="75dp"
-            android:layout_marginEnd="30dp"
-            android:layout_marginBottom="121dp"
-            android:layout_width="255dp"
-            android:layout_height="32dp"
-            android:text="@string/txt_help_AcceptTerms"/>
-
-        <Button
-            android:id="@+id/letsStart"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginTop="590dp"
-            android:layout_marginLeft="89dp"
-            android:layout_marginRight="89dp"
-            android:layout_marginBottom="64dp"
+            android:id="@+id/txtRulesAndPrizes"
             android:layout_width="0dp"
-            android:layout_height="40dp"
-            android:text="@string/txt_help_LetsStart"
-            android:textAllCaps="false"
-            android:textAlignment="viewStart"/>
-
-        <Button
-            android:id="@+id/skipButton"
-            android:layout_width="29dp"
-            android:layout_height="22dp"
-            android:layout_marginStart="24dp"
-            android:layout_marginEnd="307dp"
-            android:layout_marginTop="32dp"
-            android:layout_marginBottom="640dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
             android:background="@null"
-            android:text="@string/txt_help_Skip"
-            android:textSize="11sp"
-            android:textAllCaps="false"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
-
-        <Button
-            android:id="@+id/helpRulesAndPrizes"
-            android:background="@null"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginTop="648dp"
-            android:layout_marginStart="128dp"
-            android:layout_marginEnd="128dp"
-            android:layout_marginBottom="26dp"
-            android:layout_width="177dp"
-            android:layout_height="40dp"
+            android:gravity="center"
             android:text="@string/txt_help_RulesAndPrizes"
-            android:textAllCaps="false"/>
+            android:textAllCaps="false"
+            android:textColor="@color/all_white"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <com.google.android.material.tabs.TabLayout
-        android:id="@+id/helpTabLayout"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/containerOthersHelpPage"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="729dp"
-        android:layout_marginBottom="65dp"
-        android:layout_marginStart="142dp"
-        android:layout_marginEnd="142dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_height="0dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="52dp"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:tabGravity="center"
-        app:tabMode="scrollable"
-        app:tabSelectedTextColor="@null"
-        app:tabIndicator="@null"
-        android:paddingStart="6dp"
-        android:paddingEnd="6dp"
-        android:background="@drawable/help_tab_selector_carousel"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/containerHelpButtons"
+        tools:visibility="visible">
 
-    <androidx.viewpager.widget.ViewPager
-        android:id="@+id/helpViewPager"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/helpViewPager"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
