--- a/tti2sdk/src/main/res/layout/activity_help.xml
+++ b/tti2sdk/src/main/res/layout/activity_help.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="?android:attr/actionBarSize"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -95,7 +96,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="40dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="40dp"
             android:fontFamily="@font/telkomsel_batik_sans_regular"
             android:gravity="center"
@@ -104,32 +105,53 @@
             android:textColor="@color/all_white"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/txtHelpTitle"
-            tools:text="@string/txt_help_description"/>
+            tools:text="@string/txt_help_description" />
 
         <CheckBox
             android:id="@+id/chkboxTerms"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
-            android:layout_marginTop="14dp"
-            android:layout_marginEnd="32dp"
-            android:paddingStart="12dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginEnd="303dp"
             android:buttonTint="@color/all_white"
-            android:text="@string/txt_help_AcceptTerms"
             android:textColor="@color/all_white"
+            app:layout_constraintBottom_toTopOf="@+id/txtRulesAndPrizes"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.384"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/txtHelpDescription"
-            tools:text="@string/txt_help_AcceptTerms"/>
+            app:layout_constraintVertical_bias="0.0" />
+
+        <TextView
+            android:id="@+id/termsTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="0dp"
+            android:layout_marginEnd="30dp"
+            android:buttonTint="@color/all_white"
+            android:fontFamily="@font/telkomsel_batik_sans_regular"
+            android:gravity="start"
+            android:text="@string/txt_help_AcceptTerms"
+            android:textColor="@color/all_white"
+            android:textSize="12sp"
+            app:layout_constraintBottom_toTopOf="@+id/btnStart"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.223"
+            app:layout_constraintStart_toEndOf="@id/chkboxTerms"
+            app:layout_constraintTop_toBottomOf="@id/txtHelpDescription"
+            app:layout_constraintVertical_bias="0.086"
+            tools:text="@string/txt_help_AcceptTerms" />
 
         <Button
             style="@style/ButtonStyle"
             android:id="@+id/btnStart"
             android:layout_width="0dp"
             android:layout_height="48dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:background="@drawable/background_btn_help_start"
             android:clickable="true"
             android:backgroundTint="@color/all_white"
@@ -145,20 +167,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/chkboxTerms"/>
-
-        <TextView
-            android:id="@+id/txtRulesAndPrizes"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
-            android:background="@null"
-            android:gravity="center"
-            android:text="@string/txt_help_RulesAndPrizes"
-            android:textAllCaps="false"
-            android:textColor="@color/all_white"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -187,6 +195,20 @@
             app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <TextView
+        android:id="@+id/txtRulesAndPrizes"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:background="@null"
+        android:gravity="center"
+        android:text="@string/txt_help_RulesAndPrizes"
+        android:textAllCaps="false"
+        android:textColor="@color/all_white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/btnSkip"
