--- a/tti2sdk/src/main/res/layout/fragment_help_rupiah.xml
+++ b/tti2sdk/src/main/res/layout/fragment_help_rupiah.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.help.HelpRupiahFragment"
+    tools:context=".ui.onboarding.HelpRupiahFragment"
     android:background="@null">
 
     <androidx.constraintlayout.widget.ConstraintLayout
