--- a/tti2sdk/src/main/res/layout/item_list_prizes_available.xml
+++ b/tti2sdk/src/main/res/layout/item_list_prizes_available.xml
@@ -13,10 +13,12 @@
 
     <ImageView
         android:id="@+id/ivIconTop"
-        android:layout_width="wrap_content"
+        android:layout_width="48dp"
         android:layout_height="48dp"
         android:layout_marginStart="20dp"
+        android:layout_marginEnd="10dp"
         app:layout_constraintBottom_toBottomOf="@+id/containerButtomKeepChanges"
+        app:layout_constraintEnd_toStartOf="@+id/titleVoucher"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/containerButtomKeepChanges" />
 
@@ -25,9 +27,10 @@
         layout="@layout/loading_list"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="20dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/titleVoucher" />
+        app:layout_constraintBottom_toBottomOf="@+id/ivIconTop"
+        app:layout_constraintEnd_toEndOf="@+id/ivIconTop"
+        app:layout_constraintStart_toStartOf="@+id/ivIconTop"
+        app:layout_constraintTop_toTopOf="@+id/ivIconTop" />
 
     <TextView
         android:id="@+id/titleVoucher"
@@ -50,6 +53,8 @@
         android:id="@+id/containerButtomKeepChanges"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
         android:background="@null"
         android:orientation="horizontal"
         android:padding="5dp"
@@ -81,6 +86,7 @@
         android:layout_height="0dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="20dp"
+        app:layout_constraintEnd_toEndOf="@+id/ivIconTop"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ivIconTop" />
 
