--- a/tti2sdk/src/main/res/values/color.xml
+++ b/tti2sdk/src/main/res/values/color.xml
@@ -11,6 +11,7 @@
     <color name="gray_text_list">#66707A</color>
     <color name="gray_divider">#CECECE</color>
     <color name="gray_text_disable">#B3BAC6</color>
+    <color name="border_prizes">#CCD1D9</color>
     <color name="line_gray_prizes">#EBEEEF</color>
     <color name="blue_dark">#001A41</color>
     <color name="blue_progress">#0050AE</color>
